# django-vuejs

./: .gitignore  MANIFEST.in  README.md  actualitzarDeVue2aVue3.txt  requirements-devel.txt  setup.cfg  setup.py
django_vuejs/: __init__.py  mixins.py
django_vuejs/templates/django_vuejs/tags/: vuejs_js.html
django_vuejs/templatetags/: django_vuejs.py
scripts/: pre-commit.sh
