[metadata]
description-file = README.md

[pycodestyle]
max-line-length = 119
exclude = .git,
hang-closing = false

[flake8]
ignore = D203,C0111
exclude = .git
max-line-length = 119
select = C,E,F,W,B

[isort]
skip_glob=
default_section = THIRDPARTY
include_trailing_comma = True
known_first_party = tests

[pylama]
linters = pep8,pyflakes
ignore = D203,D100,C0111
skip =

[pylama:pep8]
max_line_length = 119

[pylama:pyflakes]
max_line_length = 119

[pylama:pylint]
max_line_length = 119
